tests/golden/compile-pass/stmt_let_mut_assign.rua
fn increment() -> i64 {
    let mut value = 1;
    value = value + 1;
    value
}
