tests/golden/compile-fail/type_break_value_in_while.rua
fn invalid() {
    while true {
        break 1;
    }
}
